@@ -39,8 +39,8 @@
 #   bayrad, CFontz, CFontz633, CFontzPacket, curses, CwLnx, EyeboxOne,
 #   g15, glcdlib, glk, hd44780, icp_a106, imon, IOWarrior, irman,
 #   joy, lb216,lcdm001, lcterm, lirc,MD8800, ms6931, mtc_s16209x,
-#   MtxOrb, NoritakeVFD, pyramid, sed1330, sed1520, serialVFD,
-#   sli, stv5730, svga, t6963, text, tyan, ula200, xosd
+#   MtxOrb, NoritakeVFD, pyramid, sed1330, sed1520, serialPOS,
+#   serialVFD, sli, stv5730, svga, t6963, text, tyan, ula200, xosd
 Driver=curses
 
 # Tells the driver to bind to the given interface
@@ -724,6 +724,24 @@ ConnectionType=classic
 
 # Port where the LPT is. Usual values are 0x278, 0x378 and 0x3BC
 Port=0x378
+
+
+
+## serial POS display driver ##
+[serialPOS]
+
+# Device to use in serial modea [default: /dev/lcd]
+Device=/dev/lcd
+
+# Specifies the size of the display in characters. [default: 16x2]
+Size=16x2
+
+# Set the communication protocol to use with the POS display.
+# [default: AEDEX; legal: IEE, Epson, Emax, IBM, LogicControls, Ultimate]
+Type=AEDEX
+
+# communication baud rate with the display [default: 9600; legal: 1200, 2400, 19200, 115200]
+Speed=9600
 
 
 
